# Gg_Docking_Kernel

./: CMakeLists.txt  LICENSE  README.md  README_EN.md  lib5.cpp
AGg自动化处理工具模块/: readme.md
Compiled_finished_product/KPM-KMA-RW-DRIVER/KernelDriverKpModule/: kma_v6.12.620.kpm
Compiled_finished_product/KpmApReadioctl/KernelDriverKoModule/: ApReadioctl.kpm
Compiled_finished_product/KpmMemoryioctlhook/KernelDriverKoModule/: MemoryDriver_IOCTLhook.kpm
Compiled_finished_product/KpmTearioctlhook/96Gg/: lib5.so.primary
Compiled_finished_product/KpmTearioctlhook/KernelDriverKoModule/: fscan-ioctl.kpm
Compiled_finished_product/ditProKpm/KernelDriverKoModule/: ditPro_kpm.kpm
Compiled_finished_product/driverGT1_567RTdev/KernelDriverKoModule/: GT V1.5-release.rar
Compiled_finished_product/driverGT2_12RThook/KernelDriverKoModule/: GT V2.2.rar
KernelDriverKoModule/ditProKpm/: ditPro_kpm.kpm
KernelDriverKoModule/driverGT2_12RThook/: GT V2.1.rar
KernelGg/KPM-KMA-RW-DRIVER/jni/: Android.mk  Application.mk  KPMdriver.h  driver.h  lib5.cpp  lib5Attempt_to_test_the_king_writing_style.cpp  lib5native_hook.cpp
KernelGg/KpmApReadioctl/jni/: KpmApReadioctl.h  lib5native_hook.cpp
KernelGg/KpmMemoryioctlhook/jni/: MemoryDriver_IOCTLhook.h  lib5native_hook.cpp
KernelGg/KpmTearioctlhook/jni/: KpmTearioctlhook.h  lib5native_hook.cpp
KernelGg/ditProKpm/jni/: Application.mk  ditPro_kpm.h  lib5.cpp  lib5native_hook.cpp
KernelGg/driverDitNetlink/jni/: Android.mk  (+2 more)
KernelGg/driverDitNetlink_Prohook/: build.sh
KernelGg/driverGT2_12RThook/: build.sh
编译完成品/: lib5.so.primary
(+15 files in other folders)
